Add "Debug Panel" window and related commands for enhanced debugging:
- Introduced a new `DebugPanel` window for various debugging utilities.
- Added `OpenDebugPanel` command and integrated it into `MainWindow` menu and command bindings.
- Enhanced debug capabilities with utilities like browsing provinces, finding null markets, and locating null values in markets.
- Improved `AutoCompleteComboBox` filtering logic and keyboard interactions.
- Refactored `Market` and `TestINUI` classes with additional debug and logging functionality.

--- a/Arcanum.UI/Components/Windows/MainWindows/MainWindow.xaml
+++ b/Arcanum.UI/Components/Windows/MainWindows/MainWindow.xaml
@@ -124,6 +124,10 @@
         <CommandBinding Command = "mainWindow:MwCommands.LoadingStepRunnerCommand"
                         Executed = "LoadingStepRunnerCommand_OnExecuted"
                         CanExecute = "CommandCanAlwaysExecute" />
+        
+        <CommandBinding Command = "mainWindow:MwCommands.OpenDebugPanel"
+                        Executed = "OpenDebugPanel_OnExecuted"
+                        CanExecute = "CommandCanAlwaysExecute" />
 
         <CommandBinding Command = "mainWindow:MwCommands.OpenUIElementsBrowserCommand"
                         Executed = "UIElementsBrowserCommandCommand_OnExecuted"
@@ -321,8 +325,8 @@
                                            Command = "mainWindow:MwCommands.OpenGlobalsBrowserCommand" />
                     <uc:SearchableMenuItem Header = "Loading Strep Runner"
                                            Command = "mainWindow:MwCommands.LoadingStepRunnerCommand" />
-                    <uc:SearchableMenuItem Header = "Browse Mod Metadata"
-                                           Click = "MenuItem_OnClick" />
+                    <uc:SearchableMenuItem Header = "Debug Panel"
+                                           Command="mainWindow:MwCommands.OpenDebugPanel"/>
                     <uc:SearchableMenuItem Header = "ParsingStepBrowser"
                                            Command = "mainWindow:MwCommands.OpenParsingStepBrowserCommand" />
                     <uc:SearchableMenuItem Header = "UI Elements Browser"
@@ -334,7 +338,7 @@
                     <uc:SearchableMenuItem Header = "View INUI Objects"
                                            Command = "mainWindow:MwCommands.ViewINUIObjectsCommand" />
                     <Separator />
-                    <uc:SearchableMenuItem Header = "Load Locations"
+                    <uc:SearchableMenuItem Header = "Parser Test"
                                            Command = "mainWindow:MwCommands.ExecuteLexer" />
                 </uc:SearchableMenuItem>
             </Menu>
