--- a/Arcanum.UI/Components/Windows/PopUp/PrimitiveTypeListView.xaml
+++ b/Arcanum.UI/Components/Windows/PopUp/PrimitiveTypeListView.xaml
@@ -7,7 +7,8 @@
                          mc:Ignorable = "d"
                          Title = "PrimitiveTypeListView"
                          Height = "450"
-                         Width = "800">
+                         Width = "800"
+                         WindowStartupLocation = "CenterScreen">
     <Grid Margin = "4">
         <Grid.RowDefinitions>
             <RowDefinition Height = "*" />
