Refactor tutorial chapter structure and enhance step functionality
- Introduced abstract Chapter class with InteractiveChapter and StructureChapter implementations.
- Updated Step class to support dynamic highlight elements and interactive elements.
- Enhanced TutorialAdorner to manage multiple highlight targets and interactive elements.
- Modified TutorialManager to utilize new chapter and step structures for improved tutorial flow.

--- a/Arcanum.UI/Components/Windows/MainWindows/MainMenuScreen.xaml
+++ b/Arcanum.UI/Components/Windows/MainWindows/MainMenuScreen.xaml
@@ -182,6 +182,7 @@
             <ContentControl Grid.Row = "1"
                             Grid.Column = "1"
                             Margin = "10"
+                            Name="ContentControl"
                             Content = "{Binding CurrentView}" />
 
         </Grid>
