--- a/Arcanum.UI/Components/Windows/DebugWindows/DebugPanel.xaml
+++ b/Arcanum.UI/Components/Windows/DebugWindows/DebugPanel.xaml
@@ -38,6 +38,11 @@
                                      Margin = "2"
                                      Padding = "4"
                                      Click = "OpenSavingWindowButton_Click" />
+
+            <styleClasses:BaseButton Content = "Saving Exporter Window"
+                                     Margin = "2"
+                                     Padding = "4"
+                                     Click = "OpenSavingWindowExporterButton_Click" />
         </StackPanel>
 
         <ContentPresenter Grid.Column = "1"
