--- a/Arcanum.UI/Components/Windows/DebugWindows/AgsWindow.xaml
+++ b/Arcanum.UI/Components/Windows/DebugWindows/AgsWindow.xaml
@@ -7,8 +7,9 @@
                          mc:Ignorable = "d"
                          Title = "AgsWindow"
                          Height = "450"
-                         Width = "800">
-    <Grid>
+                         Width = "800"
+                         WindowStartupLocation = "CenterScreen">
+    <Grid Margin = "2">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width = "*" />
             <ColumnDefinition Width = "*" />
@@ -32,22 +33,27 @@
 
             <styleClasses:CorneredTextBox Grid.Row = "0"
                                           Grid.Column = "0"
-                                          x:Name = "CommentChar">
+                                          x:Name = "CommentChar"
+                                          Margin = "2">
+                #
             </styleClasses:CorneredTextBox>
 
             <ComboBox Grid.Column = "1"
                       x:Name = "SeperatorChar"
-                      ItemsSource = "{Binding SeparatorChars, RelativeSource={RelativeSource AncestorType=Window}}">
+                      ItemsSource = "{Binding SeparatorChars, RelativeSource={RelativeSource AncestorType=Window}}"
+                      Margin = "2">
             </ComboBox>
 
             <styleClasses:CorneredTextBox Grid.Row = "0"
                                           Grid.Column = "2"
-                                          x:Name = "OpeningChar">
+                                          x:Name = "OpeningChar"
+                                          Margin = "2">
             </styleClasses:CorneredTextBox>
 
             <styleClasses:CorneredTextBox Grid.Row = "0"
                                           Grid.Column = "3"
-                                          x:Name = "ClosingChar">
+                                          x:Name = "ClosingChar"
+                                          Margin = "2">
             </styleClasses:CorneredTextBox>
 
         </Grid>
@@ -56,7 +62,8 @@
                   Grid.Row = "1"
                   x:Name = "AgsTypesView"
                   ItemsSource = "{Binding AgsTypes, RelativeSource={RelativeSource AncestorType=Window}}"
-                  SelectionChanged = "AgsItemsView_SelectionChanged">
+                  SelectionChanged = "AgsItemsView_SelectionChanged"
+                  Margin = "2">
             <ListView.ItemTemplate>
                 <DataTemplate>
                     <TextBlock Text = "{Binding Name}" />
@@ -68,10 +75,11 @@
                   Grid.Row = "1"
                   x:Name = "AgsItemsView"
                   ItemsSource = "{Binding AgsItems, RelativeSource={RelativeSource AncestorType=Window}}"
-                  SelectionChanged = "ObjectSelector_OnSelectionChanged">
+                  SelectionChanged = "ObjectSelector_OnSelectionChanged"
+                  Margin = "2">
             <ListView.ItemTemplate>
                 <DataTemplate>
-                    <TextBlock Text = "{Binding Name}" />
+                    <TextBlock Text = "{Binding ClassMetadata}" />
                 </DataTemplate>
             </ListView.ItemTemplate>
         </ListView>
@@ -85,12 +93,13 @@
                                       IsReadOnly = "True"
                                       FontFamily = "Consolas"
                                       FontSize = "12"
-                                      Margin = "0" />
+                                      Margin = "2" />
 
         <styleClasses:BaseButton Grid.Column = "2"
                                  Grid.Row = "2"
                                  Width = "100"
-                                 Click = "ExportButton_Click">
+                                 Click = "ExportButton_Click"
+                                 Margin = "2">
             Export
         </styleClasses:BaseButton>
     </Grid>
