Add `ExportFileWindow` to handle file exports in Debug UI
Introduces the `ExportFileWindow` and related XAML UI with support for displaying available files, objects per file, and preview functionality. Updates `DebugPanel` with a button to open the exporter. Refactors `IEu5Object` interfaces to provide generic and non-generic item enumeration.

Signed-off-by: Minnator <minnator.info@web.de>

--- a/Arcanum.UI/Components/Windows/DebugWindows/DebugPanel.xaml
+++ b/Arcanum.UI/Components/Windows/DebugWindows/DebugPanel.xaml
@@ -43,6 +43,11 @@
                                      Margin = "2"
                                      Padding = "4"
                                      Click = "OpenSavingWindowExporterButton_Click" />
+
+            <styleClasses:BaseButton Content = "Open File Exporter"
+                                     Margin = "2"
+                                     Padding = "4"
+                                     Click = "OpenTestWindowButton_Click" />
         </StackPanel>
 
         <ContentPresenter Grid.Column = "1"
