--- a/Arcanum.UI/Components/Styles/Base/BaseTabControl.xaml
+++ b/Arcanum.UI/Components/Styles/Base/BaseTabControl.xaml
@@ -4,6 +4,7 @@
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source = "/Arcanum_UI;component/Assets/ArcanumShared/DefaultPalette.xaml" />
         <ResourceDictionary Source = "/Arcanum_UI;component/Assets/ArcanumShared/DefaultFonts.xaml" />
+        <ResourceDictionary Source = "/Arcanum_UI;component/Components/Styles/Base/BaseScrollbar.xaml" />
     </ResourceDictionary.MergedDictionaries>
 
     <Style TargetType = "{x:Type TabItem}">
@@ -71,6 +72,133 @@
                 Value = "{StaticResource DefaultBorderColorBrush}" />
         <Setter Property = "BorderThickness"
                 Value = "2" />
+        <Setter Property = "Padding"
+                Value = "0" />
+        <Setter Property = "Template">
+            <Setter.Value>
+                <ControlTemplate TargetType = "{x:Type TabControl}">
+                    <!-- The Grid automatically adapts based on what's placed in it -->
+                    <Grid KeyboardNavigation.TabNavigation = "Local">
+                        <!-- Define 2 rows and 2 columns to handle all placements -->
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height = "Auto" />
+                            <RowDefinition Height = "*" />
+                        </Grid.RowDefinitions>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width = "Auto" />
+                            <ColumnDefinition Width = "*" />
+                        </Grid.ColumnDefinitions>
+
+                        <!-- Header for Top placement (hidden by default) -->
+                        <TabPanel x:Name = "TopHeaderPanel"
+                                  Grid.Column = "1"
+                                  Grid.Row = "0"
+                                  IsItemsHost = "true"
+                                  Visibility = "Visible"
+                                  KeyboardNavigation.TabIndex = "1"
+                                  Background = "Transparent" />
+
+                        <!-- ScrollViewer for Left/Right placement -->
+                        <ScrollViewer Grid.Column = "0"
+                                      Grid.Row = "0"
+                                      x:Name = "HeaderScrollViewer"
+                                      HorizontalScrollBarVisibility = "Disabled"
+                                      VerticalScrollBarVisibility = "Auto"
+                                      Visibility = "Collapsed">
+                            <TabPanel x:Name = "SideHeaderPanel"
+                                      IsItemsHost = "true"
+                                      KeyboardNavigation.TabIndex = "1"
+                                      Background = "Transparent" />
+                        </ScrollViewer>
+
+                        <Border x:Name = "ContentPanel"
+                                Grid.Column = "1"
+                                Grid.Row = "1"
+                                BorderThickness = "{TemplateBinding BorderThickness}"
+                                BorderBrush = "{TemplateBinding BorderBrush}"
+                                Background = "{TemplateBinding Background}"
+                                KeyboardNavigation.DirectionalNavigation = "Contained"
+                                KeyboardNavigation.TabIndex = "2">
+                            <ContentPresenter x:Name = "PART_SelectedContentHost"
+                                              ContentSource = "SelectedContent"
+                                              Margin = "{TemplateBinding Padding}"
+                                              SnapsToDevicePixels = "{TemplateBinding SnapsToDevicePixels}" />
+                        </Border>
+                    </Grid>
+                    <ControlTemplate.Triggers>
+                        <!-- Trigger for Left-aligned tabs -->
+                        <Trigger Property = "TabStripPlacement"
+                                 Value = "Left">
+                            <!-- Show the ScrollViewer, hide the top panel -->
+                            <Setter TargetName = "HeaderScrollViewer"
+                                    Property = "Visibility"
+                                    Value = "Visible" />
+                            <Setter TargetName = "TopHeaderPanel"
+                                    Property = "Visibility"
+                                    Value = "Collapsed" />
+
+                            <!-- Place items in the grid correctly -->
+                            <Setter TargetName = "HeaderScrollViewer"
+                                    Property = "Grid.Row"
+                                    Value = "0" />
+                            <Setter TargetName = "HeaderScrollViewer"
+                                    Property = "Grid.Column"
+                                    Value = "0" />
+                            <Setter TargetName = "ContentPanel"
+                                    Property = "Grid.Row"
+                                    Value = "0" />
+                            <Setter TargetName = "ContentPanel"
+                                    Property = "Grid.Column"
+                                    Value = "1" />
+
+                            <!-- Span the full height -->
+                            <Setter TargetName = "HeaderScrollViewer"
+                                    Property = "Grid.RowSpan"
+                                    Value = "2" />
+                            <Setter TargetName = "ContentPanel"
+                                    Property = "Grid.RowSpan"
+                                    Value = "2" />
+
+                        </Trigger>
+
+                        <!-- Trigger for Top-aligned tabs (this is the default) -->
+                        <Trigger Property = "TabStripPlacement"
+                                 Value = "Top">
+                            <!-- This is the default state, no setters needed if defaults are correct -->
+                        </Trigger>
+
+                        <!-- Add triggers for Right and Bottom if needed -->
+                        <Trigger Property = "TabStripPlacement"
+                                 Value = "Right">
+                            <Setter TargetName = "HeaderScrollViewer"
+                                    Property = "Visibility"
+                                    Value = "Visible" />
+                            <Setter TargetName = "TopHeaderPanel"
+                                    Property = "Visibility"
+                                    Value = "Collapsed" />
+                            <Setter TargetName = "HeaderScrollViewer"
+                                    Property = "Grid.Row"
+                                    Value = "0" />
+                            <Setter TargetName = "HeaderScrollViewer"
+                                    Property = "Grid.Column"
+                                    Value = "1" />
+                            <Setter TargetName = "ContentPanel"
+                                    Property = "Grid.Row"
+                                    Value = "0" />
+                            <Setter TargetName = "ContentPanel"
+                                    Property = "Grid.Column"
+                                    Value = "0" />
+                            <Setter TargetName = "HeaderScrollViewer"
+                                    Property = "Grid.RowSpan"
+                                    Value = "2" />
+                            <Setter TargetName = "ContentPanel"
+                                    Property = "Grid.RowSpan"
+                                    Value = "2" />
+                        </Trigger>
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
     </Style>
 
 </ResourceDictionary>
