--- a/Arcanum.UI/Components/UserControls/BaseControls/FloatNumericUpDown.xaml
+++ b/Arcanum.UI/Components/UserControls/BaseControls/FloatNumericUpDown.xaml
@@ -42,7 +42,7 @@
                      MouseWheel = "NudTextBox_MouseWheel"
                      GotKeyboardFocus = "NudTextBox_GotKeyboardFocus"
                      Foreground = "{StaticResource DefaultForeColorBrush}"
-                     FontFamily = "{StaticResource DefaultFont}"
+                     FontFamily = "{Binding FontFamily, RelativeSource={RelativeSource AncestorType=UserControl}}"
                      FontSize = "{StaticResource DefaultFontSize}"
                      FontWeight = "{StaticResource DefaultFontWeight}"
                      CaretBrush = "{StaticResource DefaultForeColorBrush}"
@@ -50,6 +50,9 @@
                      BorderThickness = "0"
                      VerticalAlignment = "Stretch"
                      HorizontalAlignment = "Stretch"
+                     VerticalContentAlignment = "Center"
+                     VerticalScrollBarVisibility = "Disabled"
+                     TextWrapping = "NoWrap"
                      Margin = "1"
                      Padding = "0">
             </TextBox>
