Worked on parsing for countries and pipeline in general
Signed-off-by: Minnator <minnator.info@web.de>

--- a/Arcanum.UI/Components/UserControls/BaseControls/ModValViewer.xaml
+++ b/Arcanum.UI/Components/UserControls/BaseControls/ModValViewer.xaml
@@ -52,7 +52,7 @@
             <ColumnDefinition Width = "*" />
         </Grid.ColumnDefinitions>
 
-        <TextBlock Text = "{Binding Definition.UniqueKey}"
+        <TextBlock Text = "{Binding Definition.UniqueId}"
                    VerticalAlignment = "Center"
                    Margin = "5,0"
                    FontWeight = "SemiBold" />
